# records-bench

./: LICENSE  README.md  records-bench.cabal  stack.yaml
bench/: Main.hs
bench/Records/Bench/: Bookkeeper.hs  Class.hs  Composite.hs  Haskell.hs  Suite.hs  Vinyl.hs
bench/Records/Bench/Diverse/: Many.hs
