name:                records-bench
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/schernichkin/records-bench#readme
license:             BSD3
license-file:        LICENSE
author:              Stanislav Chernichkin
maintainer:          schernichkin@gmail.com
copyright:           Copyright (C) 2017 Stanislav Chernichkin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/schernichkin/records-bench#readme>

benchmark records-bench
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      bench
  build-depends:       base
                     , abstract-par
                     , composite-base
                     , criterion
                     , data-diverse
                     , lens
                     , tagged
                     , vinyl
  other-modules:       Records.Bench.Composite
                     , Records.Bench.Class
                     , Records.Bench.Diverse.Many
                     , Records.Bench.Haskell
                     , Records.Bench.Suite
                     , Records.Bench.Vinyl
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields

source-repository head
  type:     git
  location: https://github.com/schernichkin/records-bench
